feat(hometask1): add

--- a/src/navigation/navigation.html
+++ b/src/navigation/navigation.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navigation</title>
-
-    <link rel="stylesheet" href="./navigation.css" />
-  </head>
-  <body>
-    <!-- Your solution -->
-  </body>
-</html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="navigation.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
+    <title>Figma1</title>
+</head>
+<body>
+    <div class="container1">
+    <header class="nav3">
+        <h2>Startup 3</h2>
+        <ul class="menu">
+            <li>Features</li>
+            <li>Downloads</li>
+            <li>Docs</li>
+            <li>Support</li>
+            <li id="blg">Blog</li>
+            <li id="srch"><i class="fa-solid fa-magnifying-glass"></i> Search</li>
+        </ul>
+        <ul class="sm">
+            <li id="twttr"><i class="fa-brands fa-twitter"></i></li>
+            <li id="fcbk"><i class="fa-brands fa-square-facebook"></i></li>
+            <li id="ggl"><i class="fa-brands fa-google-plus-g"></i></li>
+        </ul>
+    </header>
+</div>
+</body>
