--- a/src/contents/contents.html
+++ b/src/contents/contents.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contents</title>
-
-    <link rel="stylesheet" href="./contents.css" />
-  </head>
-  <body>
-    <!-- Your solution -->
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="contents.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
+    <title>Figma1</title>
+</head>
+    <section class="contents17">
+      <div class="container2">
+      <div class="comp">
+          <div id="maincomp">
+              Components
+          </div>
+          <div id="comptext">
+              Startup Design Framework contains components and complex blocks which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.
+              &emsp;Also We prepared some high-quality photos that you can use in your projects. 
+          </div>
+      </div>
+      <div class="textcard">We haven’t forgotten about responsive layout. With Startup Framework, you can create a website with full mobile support.</div>
+      </div>
+  </section>
+</body>
 </html>
