--- a/src/features/features.html
+++ b/src/features/features.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navigation</title>
-
-    <link rel="stylesheet" href="./features.css" />
-  </head>
-  <body>
-    <!-- Your solution -->
-  </body>
-</html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="features.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
+    <title>Figma1</title>
+</head>
+<body>
+    <section class="feat3">
+      <div class="title">
+          <div id="main">What’s New in Startup?</div>
+      <div id="descr1">
+          We have created a new product that will help designers, developers and
+          companies create websites for their startups quickly and easily.
+      </div> </div>
+      <div class="cards">
+          <div id="card1">
+              <img src="fa-paint-brush.svg" id="newimg1">
+              <div class="new">New Design</div>
+              <div class="newtxt">
+                  Carefully crafted precise design, with harmonious typography and perfect padding around every component
+              </div>
+          </div>
+          <div id="card2">
+              <img src="fa-code.svg" id="newimg2">
+              <div class="new">New Code</div>
+              <div class="newtxt">
+                  Built with HTML, CSS and JS. Startup’s code is easy to<br>under-stand and easy to change. No other frameworks needed.
+              </div>
+          </div>
+          <div id="card3">
+              <img src="fa-toggle-on.svg" id="newimg3">
+              <div class="new">New Character</div>
+              <div class="newtxt" id="newtxt3">
+                  Transform your ideas into reality and launch a beautiful site with minimal frustration.
+              </div>
+          </div>
+      </div>
+  </section>
+</body>
