feat(hometask2):add

--- a/src/forms/forms.html
+++ b/src/forms/forms.html
@@ -3,12 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Forms</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Your solution here -->
+    <div class="forms3">
+      <img src='Illustration.svg' id="img1">
+      <div class="account">
+
+        <div class="text">
+          <div id="maintxt">Create an Account</div>
+        <div id="descr">By signing up, you agree to the Terms of Service.</div>
+        </div>
+        <div class="form">
+          <form>
+            <p id="em">E-MAIL</p>
+            <input type="text" id="field1" placeholder="Your email">
+            <p id="pass">PASSWORD</p>
+            <input type="password" id="field2" placeholder="Password">
+            <input type="password" id="field3" placeholder="Repeat">
+            <div id="buttonor">
+            <input type="button" value="Sign Up" id="sub">
+            <div id="or">OR
+              <i class="fa-brands fa-square-facebook"></i>
+              <i class="fa-brands fa-twitter"></i>
+             <i class="fa-brands fa-google-plus-g"></i></div></div>
+          </form>
+        </div>
+
+      </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
